external-crates/move/crates/move-compiler/tests/move_check/naming/type_hole_gated_valid_usage.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/naming/type_hole_gated_valid_usage.move:3:23
  │
3 │         let v: vector<_> = vector[0];
  │                       ^ '_' placeholders for type inference are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.
